--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
   "name": "philipsburg-tv",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "react-scripts": "0.9.0"
   },
   "dependencies": {
     "express": "^4.14.1",
+    "knex": "^0.12.7",
     "morgan": "^1.8.1",
+    "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-icons": "^2.2.3",
@@ -15,9 +18,10 @@
     "youtube-react": "^0.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts start & nodemon server/bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "knex": "knex"
   }
 }
