--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:3001",
+  "engines": {
+    "node": "7.4.0"
+  },
   "devDependencies": {
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "express": "^4.14.1",
     "knex": "^0.12.7",
     "morgan": "^1.8.1",
