--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.15.3",
     "express": "^4.14.1",
     "knex": "^0.12.7",
+    "material-ui": "^0.17.0",
     "morgan": "^1.8.1",
     "pg": "^6.1.2",
     "react": "^15.4.2",
