--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "knex": "^0.12.7",
     "material-ui": "^0.17.0",
     "morgan": "^1.8.1",
+    "path": "^0.12.7",
     "pg": "^6.1.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
