--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "start": "react-scripts start & nodemon server/bin/www",
     "start-prod": "env PORT=3000 nodemon server/bin/www",
     "build": "react-scripts build",
+    "heroku-postbuild": "knex seed:run",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "knex": "knex"
