Prepare the Heroku

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.15.3",
     "express": "^4.14.1",
+    "foreman": "^2.0.0",
     "knex": "^0.12.7",
     "material-ui": "^0.17.0",
     "morgan": "^1.8.1",
@@ -30,6 +31,7 @@
     "heroku-postbuild": "knex migrate:latest",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "knex": "knex"
+    "knex": "knex",
+    "nf": "nf start"
   }
 }
