Prepare the Heroku

--- a/package.json
+++ b/package.json
@@ -28,10 +28,10 @@
     "start": "react-scripts start & nodemon server/bin/www",
     "start-prod": "env PORT=3000 nodemon server/bin/www",
     "build": "react-scripts build",
-    "heroku-postbuild": "knex migrate:latest",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
+    "nf": "nf start",
     "knex": "knex",
-    "nf": "nf start"
+    "heroku-postbuild": "knex migrate:latest"
   }
 }
