--- a/package.json
+++ b/package.json
@@ -25,13 +25,13 @@
     "youtube-react": "^0.0.1"
   },
   "scripts": {
+    "knex": "knex",
+    "heroku-postbuild": "knex migrate:latest",
     "start": "react-scripts start & nodemon server/bin/www",
     "start-prod": "env PORT=3000 nodemon server/bin/www",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
-    "nf": "nf start",
-    "knex": "knex",
-    "heroku-postbuild": "knex migrate:latest"
+    "nf": "nf start"
   }
 }
